fix(layout): body css too tall

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    @apply min-h-[100vh] flex items-center justify-center sm:bg-slate-700;
+    @apply flex items-center justify-center sm:bg-slate-700;
 }
 
 header svg {
